@@ -277,6 +277,8 @@ $("<b>#your_table_id</b>").treetable();
         <dd>Move node <tt>nodeId</tt> to new parent with <tt>destinationId</tt>.</dd>
         <dt><tt>node(id)</tt></dt>
         <dd>Select a node from the tree. Returns a <tt>TreeTable.Node</tt> object.</dd>
+        <dt><tt>removeNode(id)</tt></dt>
+        <dd>Remove a node and all its descendants from the tree.</dd>
         <dt><tt>reveal(id)</tt></dt>
         <dd>Reveal a node in the tree.</dd>
         <dt><tt>sortBranch(node)</tt>, <tt>sortBranch(node, columnOrFunction)</tt></dt>
